add list department
